--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,6 @@
-server:
-	port: 8081
-spring:
-	cloud:
-		config: 
-			server:
-				git: 
-					default-label: config-servie
-						
+server.port: 8081
+spring:  cloud:    config:      server:        git:
+          default-label: config-server          uri: https://github.com/DanielaVergara/config-server
+          search-paths:          - config-data
+  application:
+     name: config-service
